--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.25",
+    "@types/react": "^17.0.44",
+    "@types/react-bootstrap": "^0.32.29",
+    "@types/react-dom": "^18.0.1",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
@@ -17,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
